# CRFSuite

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README-0.13.md  README.md  aclocal.m4  chain.in  config.h  config.h.in  config.status  configure  configure.ac  configure.in  libtool  linear_scores.tex  tap-driver.sh  tree.in
.github/workflows/: ccpp.yml
example/: linchain.order2.dump  linchain.order3.dump  linchain.order4.dump  semim.order1.seglen1.dump  semim.order2.dump  semim.order3.dump  semim.order4.dump
example/input/: semim.in
frontend/: Makefile  Makefile.am  Makefile.in  crfsuite  dump.c  iwa.c  learn.c  main.c  readdata.h  reader.c  tag.c
frontend/.deps/: crfsuite-dump.Po  crfsuite-iwa.Po  crfsuite-learn.Po  crfsuite-main.Po  crfsuite-option.Po  crfsuite-reader.Po  crfsuite-tag.Po
frontend/.libs/: crfsuite
include/: Makefile  Makefile.am  Makefile.in  crfsuite.h  crfsuite.hpp  crfsuite_api.hpp
lib/cqdb/: Makefile  Makefile.am  Makefile.in  libcqdb.la  libcqdb_la-cqdb.lo  libcqdb_la-lookup3.lo
lib/cqdb/.deps/: libcqdb_la-cqdb.Plo  libcqdb_la-lookup3.Plo
lib/cqdb/.libs/: libcqdb.lai
lib/cqdb/include/: cqdb.h
lib/cqdb/src/: cqdb.c
lib/crf/: Makefile  Makefile.am  Makefile.in  libcrfsuite.la  libcrfsuite_la-crf1d_context.lo  libcrfsuite_la-crf1d_encode.lo  libcrfsuite_la-crf1d_feature.lo  libcrfsuite_la-crf1d_model.lo  libcrfsuite_la-crf1d_tag.lo  libcrfsuite_la-crfsuite.lo  libcrfsuite_la-crfsuite_train.lo  libcrfsuite_la-dataset.lo  libcrfsuite_la-dictionary.lo  libcrfsuite_la-holdout.lo  libcrfsuite_la-logging.lo  libcrfsuite_la-params.lo  libcrfsuite_la-quark.lo  libcrfsuite_la-rumavl.lo  libcrfsuite_la-train_arow.lo  libcrfsuite_la-train_averaged_perceptron.lo  libcrfsuite_la-train_l2sgd.lo  libcrfsuite_la-train_lbfgs.lo  libcrfsuite_la-train_passive_aggressive.lo
lib/crf/.deps/: libcrfsuite_la-crf1d_context.Plo  libcrfsuite_la-crf1d_encode.Plo  libcrfsuite_la-crf1d_feature.Plo  libcrfsuite_la-crf1d_model.Plo  libcrfsuite_la-crf1d_tag.Plo  libcrfsuite_la-crfsuite.Plo  libcrfsuite_la-crfsuite_train.Plo  libcrfsuite_la-dataset.Plo  libcrfsuite_la-dictionary.Plo  libcrfsuite_la-holdout.Plo  libcrfsuite_la-logging.Plo  libcrfsuite_la-params.Plo  libcrfsuite_la-quark.Plo  libcrfsuite_la-rumavl.Plo  libcrfsuite_la-train_arow.Plo  libcrfsuite_la-train_averaged_perceptron.Plo  libcrfsuite_la-train_l2sgd.Plo  libcrfsuite_la-train_lbfgs.Plo  libcrfsuite_la-train_passive_aggressive.Plo
lib/crf/.libs/: libcrfsuite.lai
lib/crf/src/: crf1d.h  crf1d_context.c  crf1d_encode.c  crf1d_feature.c  crf1d_model.c  crf1d_tag.c  crfsuite.c  crfsuite_internal.h  crfsuite_train.c  dataset.c  dictionary.c  holdout.c  params.c  params.h  quark.c  ring.c  ring.h  rumavl.c  rumavl.h  semimarkov.c  semimarkov.h  train_arow.c  train_averaged_perceptron.c  train_l2sgd.c  train_lbfgs.c  train_passive_aggressive.c  vecmath.h
swig/: Makefile  Makefile.am  Makefile.in  crfsuite.cpp  export.i
swig/python/: prepare.sh  sample_tag.py  sample_train.py  setup.py.in
tests/: Makefile.am  test_sm_1.test  test_sm_1_1.expected  test_sm_1_3.expected  test_sm_1_5.expected  test_tree_2.input  test_tree_2.test  test_tree_2_1.expected  test_tree_2_3.expected  test_tree_2_5.expected  test_tree_2_7.expected  test_tree_2_9.expected
